--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "async": "~0.2.10",
     "cli-table": "~0.3.0",
     "columnify": "~0.1.2",
-    "prettyjson": "~0.11.1"
+    "prettyjson": "~0.11.1",
+    "format-json": "~1.0.3"
   },
   "devDependencies": {
     "jshint": "~2.4.1",
