--- a/package.json
+++ b/package.json
@@ -20,21 +20,22 @@
     "posttest": "./node_modules/.bin/istanbul check-coverage && rm -rf coverage"
   },
   "dependencies": {
-    "primus": "~2.0",
-    "commander": "~2.1.0",
-    "lodash": "~2.4.1",
-    "primus-emitter": "~3.0",
-    "ws": "~0.4.31",
-    "chalk": "~0.4.0",
-    "levelup": "~0.18.2",
-    "leveldown": "~0.10.2",
-    "service-locator": "0.0.2",
     "async": "~0.2.10",
+    "chalk": "~0.4.0",
     "cli-table": "~0.3.0",
     "columnify": "~0.1.2",
-    "prettyjson": "~0.11.1",
+    "commander": "~2.1.0",
     "format-json": "~1.0.3",
-    "inquirer": "~0.4.1"
+    "inquirer": "~0.4.1",
+    "leveldown": "~0.10.2",
+    "levelup": "~0.18.2",
+    "lodash": "~2.4.1",
+    "moment": "^2.6.0",
+    "prettyjson": "~0.11.1",
+    "primus": "~2.0",
+    "primus-emitter": "~3.0",
+    "service-locator": "0.0.2",
+    "ws": "~0.4.31"
   },
   "devDependencies": {
     "jshint": "~2.4.1",
