--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "levelup": "~0.18.2",
     "lodash": "~2.4.1",
     "moment": "^2.6.0",
+    "node-notifier": "^4.2.3",
     "prettyjson": "~0.11.1",
     "primus": "~2.3",
     "primus-emitter": "~3.0",
